2003-08-17  Ettore Perazzoli  <ettore@ximian.com>

	* gui/control-factory.h: #include <bonobo/bonobo-control.h>.

	* gui/Makefile.am (libevolution_calendar_la_LIBADD): Link to
	libeutil.

	* gui/e-calendar-table.c (e_calendar_table_set_status_message):
	Don't use the global_shell_client.

	* gui/main.c (factory): Call calendar_component_peek() for the
	GNOME_Evolution_Calendar_Component OAFIID.

	* gui/GNOME_Evolution_Calendar.server.in.in: Set up the
	GNOME_Evolution_Calendar_Component server and rename
	GNOME_Evolution_Calendar_Factory to
	GNOME_Evolution_Calendar_Factory_2.
	* gui/main.c: Updated IDs accordingly.

	* gui/e-meeting-time-sel.c (e_meeting_time_selector_construct):
	Use calendar_component_peek_config_directory() instead of
	evolution_dir.
	* gui/gnome-cal.c (setup_widgets): Likewise.
	(gnome_calendar_destroy): Likewise.
	* gui/dialogs/meeting-page.c (meeting_page_construct): Likewise.

	* gui/gnome-cal.c (gnome_calendar_open): #if 0 some code for
	figuring out where the task list is.

	* gui/calendar-component.c: New file.
	* gui/calendar-component.h: New file.

	* gui/itip-utils.c (itip_addresses_get): Unref the GConf client
	from gconf_client_get_default.

2003-08-08  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model-calendar.c (ecmc_fill_component_from_model):
	implemented new virtual method.
	(ecmc_class_init): initialize new virtual method.

2003-08-08  Rodrigo Moya <rodrigo@ximian.com>

	* cal-client/cal-client.c (cal_client_update_object_with_mod):
	cal_client_get_component_as_string_internal expects now a
	icalcomponent, not a CalComponent.

	* gui/e-cal-model.h: added fill_component_from_model virtual method.

	* gui/e-cal-model.c (e_cal_model_get_default_client): return
	the default URI as per the configuration if we've got that
	client loaded. If not, return the first client.
	(get_dtstart): retrieve the value from the icalproperty.
	(set_summary): implemented correctly.
	(set_categories, set_classification, set_description): changed